--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,6 +49,8 @@ services:
     image: redis:alpine
     hostname: redis
     command: ['redis-server', '--save', '', '--appendonly', 'no']
+    volumes:
+      - redis_data:/data
     networks:
       - backend
 
@@ -57,6 +59,20 @@ services:
     hostname: beanstalkd
     networks:
       - backend
+
+volumes:
+  storage:
+    name: storage
+    driver: local
+  php:
+    name: php
+    driver: local
+  mysql_data:
+    name: mysql_data
+    driver: local
+  redis_data:
+    name: redis_data
+    driver: local
 
 networks:
   backend:
